--- a/handlers/www/default/index.html
+++ b/handlers/www/default/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html ng-app="DockerPlay" ng-controller="PlayController">
+<html ng-app="DockerPlay" ng-controller="PlayController" class="dark-theme">
     <head>
         <title>Docker Playground</title>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic|Material+Icons" />
