Add mobile optimizations, keyboard navigation enhancements, interactive feedback states, and accessibility features
Add mobile optimizations, keyboard navigation enhancements, interactive feedback states, and accessibility features to the CSS and HTML. This includes responsive spacing, typography, touch targets, dialog handling, stacked buttons on mobile, loading states, success/error animations, reduced motion support, ARIA role improvements, screen reader support, motion preferences respect, and better focus management.

--- a/handlers/www/default/index.html
+++ b/handlers/www/default/index.html
@@ -18,6 +18,7 @@
         </script>
     </head>
     <body>
+        <a href="#main-content" class="skip-link">Skip to main content</a>
 
         <div layout="column" style="height:100%;" ng-cloak>
             <section id="sessionEnd" layout="row" flex ng-if="!isAlive">
