--- a/handlers/www/default/index.html
+++ b/handlers/www/default/index.html
@@ -7,6 +7,9 @@
         <link rel="stylesheet" href="/assets/xterm/xterm.css" />
         <link rel="stylesheet" href="/assets/xterm/addons/fullscreen/fullscreen.css" />
         <link rel="stylesheet" href="/assets/style.css" />
+        <link rel="stylesheet" href="/assets/light-theme.css" />
+        <link rel="stylesheet" href="/assets/responsive.css" />
+        <link rel="stylesheet" href="/assets/lesson-editor.css" />
         <!-- Google tag (gtag.js) -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-89019737-3"></script>
         <script>
@@ -167,6 +170,17 @@
                       </div>
                       <div ng-show="instance.status=='reconnect'" class="uploadStatus">Connection has been lost. Sometimes this happens when a windows instance is joining a swarm. Trying to reconnect terminal...</div>
                       <id class="terminal-container container-{{instance.name}}">
+                          <div class="terminal-toolbar">
+                              <button title="Copy to clipboard" ng-click="copyTerminalContent(instance)">
+                                  <md-icon class="material-icons">content_copy</md-icon>
+                              </button>
+                              <button title="Clear terminal" ng-click="clearTerminal(instance)">
+                                  <md-icon class="material-icons">clear_all</md-icon>
+                              </button>
+                              <button title="Toggle fullscreen" ng-click="toggleTerminalFullscreen(instance)">
+                                  <md-icon class="material-icons">fullscreen</md-icon>
+                              </button>
+                          </div>
                           <div class="terminal-instance" id="terminal-{{instance.name}}"></div>
                       </id>
                   </md-card>
@@ -204,6 +218,10 @@
                 </md-dialog>
             </div>
         </div>
+
+        <!-- Include lesson editor and template selection dialogs -->
+        <div ng-include="'lesson-editor.html'" style="display:none;"></div>
+        <div ng-include="'lesson-templates.html'" style="display:none;"></div>
 
 
         <script type="text/ng-template" id="templates-modal.html">
@@ -311,6 +329,21 @@
                             </md-input-container>
                         </div>
                     </div>
+                    <div layout="row">
+                        <div flex="50">
+                            <md-input-container class="md-block" flex-gt-sm>
+                                <label>Theme</label>
+                                <md-select ng-model="$ctrl.currentTheme" ng-model-options="{getterSetter: true}">
+                                    <md-option value="dark">Dark Theme</md-option>
+                                    <md-option value="light">Light Theme</md-option>
+                                </md-select>
+                            </md-input-container>
+                        </div>
+                        <div flex="10"></div>
+                        <div flex="40">
+                            <p>Choose between dark and light theme for the application interface.</p>
+                        </div>
+                    </div>
                 </div>
                 </md-dialog-content>
 
@@ -346,6 +379,7 @@
         <script src="/assets/attach.js"></script>
         <script src="https://unpkg.com/moment@2.16.0/min/moment.min.js"></script>
         <script src="/assets/app.js"></script>
+        <script src="/assets/lesson-editor.js"></script>
         <script type="text/javascript" charset="utf-8">
             window.onbeforeunload = function (e) {
                 e = e || window.event;
@@ -361,4 +395,3 @@
         </script>
     </body>
 </html>
-
